--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 plugin.settings.ui.displayName = REST Automation Services
-plugin.settings.ui.help = <body style="text-align: right; float:right; font-family: {0}">Define a port that is not used by any other application on your machine and any other project in IntelliJ</body>
+plugin.settings.ui.help = <body style="text-align: right; float:right; font-family: {0}">Define a port that is not used by any other application on your machine</body>
 plugin.settings.ui.label = Provide a REST interface to IntelliJ for development automation
 plugin.settings.ui.server.border.title = Server
 plugin.settings.ui.server.port.label = REST port:
