Adjust texts in the settings-dialog

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 plugin.settings.ui.displayName = REST Automation Services
-plugin.settings.ui.help = <body style="text-align: right; float:right; font-family: {0}">Define a port that is not used by any other application on your machine</body>
-plugin.settings.ui.label = Provide a REST interface to IntelliJ for development automation
+plugin.settings.ui.help = <body style="text-align: right; float:right; font-family: {0}">The TCP port is used for providing the REST services, it should not be used by any other application on your machine</body>
+plugin.settings.ui.label = Configure the REST service
 plugin.settings.ui.server.border.title = Server
 plugin.settings.ui.server.port.label = REST port:
 plugin.settings.ui.validation.illegalPort = {0}''s port must be between 0 and 65535.
